# visualizations

./: .github-pages-trigger  .gitignore  .pre-commit-config.yaml  BAMBU_ANALYSIS_README.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CLAUDE_INSTRUCTIONS.txt  INSTRUCTIONS_FOR_VAL.md  MyBambu_Financial_Presentation_Scrollable.html  MyBambu_Interactive_Presentation.html  MyBambu_Presentation_with_LATAM_Roadmap.pptx  PRESENTATION.md  README.md  SETUP_SUMMARY.md  all_payer_shifts.json  analyze_losses.py  ask_analyst.py  bambu-loss-analysis-presentation.html  bambupay-limits-visualization.html  bambupay-tabapay-limits-analysis.html  check_semantic_models.py  circle-vs-kira-comparison.html  compliance-automation-savings.md  comprehensive_loss_report.py  create_mybambu_presentation.py  deploy.sh  docker-compose.yml  find_analysts.py  find_loss_tables.py  find_moneygram_data.py  forecast-dashboard-health-services.html  forecast-dashboard-v2.html  forecast-dashboard.html  index.html  industry_benchmark_comparison.py  list_intelligence.py  moneygram_mtd_analysis.py  mybambu-crypto-wallet-forecast.html  mybambu-deposit-options.html  mybambu-liquidation-analysis.html  (+21 more)
.github/workflows/: publish-mcp.yml  pypi.yml  test.yml
Development Claude/Apoyo Visual/: CLAUDE.md  index.html
Development Claude/Apoyo Visual/artifacts/: apoyo-mybambu-leverage-calculator.html
Development Claude/visualizations/: README.md  customer-stickiness-mobile.html  customer-stickiness.html  index.html
artifacts/: active-customers-beginning-month-report.html  bambu-pay-2-presentation.html  bambu-pay-mobile-v2.html  bambu-pay-mobile.html  comprehensive-customer-analysis.html  customer-churn-attrition-report.html  customer-stickiness-mobile.html  customer-stickiness.html  index.html  instructions.html  mybambu-latam-expansion.html  mybambu-liquidation-analysis-mobile.html  mybambu-mascot.png.b64  mybambu-mobile.html  mybambu-overview-mobile.html  mybambu-overview.html  mybambu-q3-2025-paid-ads-report-mobile.html  mybambu-q3-2025-paid-ads-report.html  mybambu-vs-majority-cac-mobile.html  test-dashboard.html  test.html
docker/server/: Dockerfile
mcp_server_snowflake/: __init__.py  auth.py  connection.py  environment.py  prompts.py  server.py  server_utils.py  tools.py  utils.py
mcp_server_snowflake/cortex_services/: prompts.py  tools.py
mcp_server_snowflake/object_manager/: objects.py  prompts.py  tools.py
mcp_server_snowflake/query_manager/: prompts.py  tools.py
mcp_server_snowflake/semantic_manager/: objects.py  prompts.py  tools.py
mcp_server_snowflake/tests/: __init__.py  test_connection.py  test_service_config.py  test_utils.py
october-analysis-prompts/: 00-master-index.md  01-user-metrics-growth.md  02-banking-financial-activity.md  03-card-usage-transactions.md  04-bambupay-p2p-payments.md  05-remittances-international.md  06-revenue-costs-financial.md  07-marketing-acquisition.md  08-product-adoption-engagement.md  09-support-operations.md  10-compliance-risk-fraud.md  11-analysis-insights-strategy.md
services/: configuration.yaml  service_config.yaml  tools_config.yaml
